# public/docs/openapi.yaml
@@ -183,9 +183,43 @@ components:
                 email:
                   type: string
                   example: admin@susantimegah.com
+                role_id:
+                  type: integer
+                  example: 5
+                role_name:
+                  type: string
+                  example: administrator
                 is_active:
                   type: boolean
                   example: true
+            menu:
+              type: array
+              items:
+                type: object
+              example:
+                - id: "charts-maps"
+                  title: "Charts-maps"
+                  type: "group"
+                  children:
+                    - id: "charts"
+                      title: "Charts"
+                      type: "collapse"
+                      icon: "ph ph-chart-donut"
+                      selected: true
+                      children:
+                        - id: "apex-chart"
+                          title: "Apex chart"
+                          type: "item"
+                          url: "/charts/apex-chart"
+                    - id: "map"
+                      title: "Map"
+                      type: "collapse"
+                      icon: "ph ph-map-trifold"
+                      children:
+                        - id: "google-map"
+                          title: "Google map"
+                          type: "item"
+                          url: "/map/google-map"
             access_token:
               type: string
               example: 1|laravel_sanctum_token_string_here
